# findpaths

./: README.md  TODO.md  build-cxx-ubuntu-arm64.sh  example_usage.py  findpaths-core.cpp  findpaths.py  pytest.ini  requirements.txt  run-benchmark.sh  run-mypy-checks.sh  setup-ubuntu-x86_64.sh  test-data-file2.txt
old-pre-multiprocessing/: CMakeLists.txt  build-cxx-macos.sh  build-cxx-ubuntu-x86_64.sh  conftest.py  example_usage_batch.py  run-benchmark2.sh  setup-common.sh  setup-macos.sh  setup-ubuntu-arm64.sh  test-data-file.txt  test-data-file3.txt
tools/: convert_tupleset_to_clojure.py  convert_tupleset_to_json.py
